# machinelearne-rs

./: .gitignore  CLAUDE.md  Cargo.toml  LLM-Usage.md  Readme.md  cobertura.xml  tarpaulin-report.html
benchmarks/: Cargo.toml  README.md
benchmarks/benches/: metrics.rs
benchmarks/benches/linear_regression/: predict.rs  train_1_feature.rs  train_2_features.rs  train_4_features.rs  train_8_features.rs
benchmarks/results/: BACKEND_COMPARISON.md  BENCHMARK_REPORT.md  FAIR_COMPARISON.md  SGD_PERFORMANCE_ANALYSIS.md  SKLEARN_SGD_ANALYSIS.md  backend_comparison.json  rust_fair_comparison.json  rust_sgd_comparison.json
benchmarks/results/raw/: sklearn_results.csv
benchmarks/scripts/: compare_results.sh  download_dataset.py  fair_comparison_sklearn.py  generate_report.py  run_all.sh  run_fair_comparison.py  sklearn_benchmarks.py
benchmarks/src/: lib.rs  main.rs  metrics.rs  utils.rs
benchmarks/src/data/: california_housing.rs  mod.rs
lib/: Cargo.toml
lib/examples/: house_price_pipeline.rs  titanic_pipeline.rs  titanic_pipeline_v2.rs  train_linear_mae.rs  train_logistic.rs
lib/src/: TODO.txt  lib.rs  pipeline.rs
lib/src/backend/: cpu.rs  mod.rs  ndarray_backend.rs  tensor1d.rs  tensor2d.rs
lib/src/dataset/: mod.rs
lib/src/loss/: mod.rs
lib/src/model/: linear.rs  mod.rs
lib/src/optimizer/: mod.rs
lib/src/preprocessing/: error.rs  mod.rs  predictive_pipeline.rs  traits.rs
lib/src/preprocessing/column_transformer/: column_transformer.rs  mod.rs
lib/src/preprocessing/encoding/: label.rs  (+3 more)
lib/src/regularizers/: mod.rs
lib/src/trainer/: mod.rs
(+55 files in other folders)
